@@ -1,28 +1,41 @@
 package com.pessoal.bora.api.incoming.errorhandling;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.MessageSource;
+import org.springframework.context.i18n.LocaleContextHolder;
 import org.springframework.http.HttpStatus;
+import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
+import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 @RestControllerAdvice
-@ResponseStatus(HttpStatus.BAD_REQUEST)
 public class DefaultErrorHandler {
 	
+	@Autowired
+	private MessageSource messageSource;
+	
+	@ExceptionHandler(MethodArgumentNotValidException.class)
+	@ResponseStatus(HttpStatus.BAD_REQUEST)
 	public ErrorResponse handleMethodArgumentNotValid(MethodArgumentNotValidException ex) {
 		
 		List<ErrorData> messages = ex
 				.getBindingResult()
 				.getFieldErrors()
 				.stream()
-				.map(fe -> new ErrorData(fe.getDefaultMessage()))
-				.collect(Collectors.toList());
+				.map(this::getMessage)
+				.toList();
 		
 		
 		return new ErrorResponse(messages);
+	}
+	
+	private ErrorData getMessage(FieldError fieldError) {
+		
+		return new ErrorData(messageSource.getMessage(fieldError, LocaleContextHolder.getLocale()));
 	}
 
 }
